Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93430

macOS: sliders should not get focus from clicking on them

    XMLWordPrintable

Details

    • macOS
    • db35ae0a75531b944a9f81d91b60582218fdfbcf (qt/qtquickcontrols2/dev) 650417d9917629f144b8f72405e2e1e002c35551 (qt/qtquickcontrols2/6.0) 765a886e8d14110e4d45eff615def3ecb2665e21 (qt/qtquickcontrols2/6.1)

    Description

      On macOS, the sliders should not get focus from clicking (Qt::StrongFocus). Instead, it should follow the logic we already do for buttons (which includes checkboxes and radiobuttons), which uses Qt::TabFocus by default.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            richard Richard Moe Gustavsen
            richard Richard Moe Gustavsen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes