macOS: don't set Qt::StrongFocus on Sliders by default

On macOS, the sliders should not get focus from clicking
(Qt::StrongFocus). Instead, it should follow the logic
we already do for buttons (which includes checkboxes
and radiobuttons), which uses Qt::TabFocus by default.

Fixes: QTBUG-93430
Pick-to: 6.1 6.0
Change-Id: I6d0d3d876a0b8c0e9cd9b23f12856090aa6a8173
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>